# mara

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  requirements.txt  vcpkg.json  xmake.lua
docs/: CMakeLists.txt  Doxyfile  conf.py
docs/src/: index.md
examples/: syntax.ra
include/: common.h  error.h  lexer.h  logger.h  tree.h  utility.h
include/tokenizer/: fsm_tokenizer.h  regex_tokenizer.h  token.h  token_factory.h  tokenizer.h
playground/: playground.ipynb
scripts/: VsDevCmd.py
src/: lexer.cpp  logger.cpp  main.cpp  main2.cpp  utility.cpp
src/tokenizer/: fsm_tokenizer.cpp  regex_tokenizer.cpp  token_factory.cpp  tokenizer.cpp
tests/: _test_lexer.cpp  test.cpp  test_error.cpp  test_lexer.cpp  test_tree.cpp  tokenizer.cpp
tests/include/: test.h
